# godot-mcp

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agents.rs  lib.rs  main.rs  server.rs
desktop/ui/: index.html  main.js  styles.css
scripts/: bundle-server.mjs  copy-assets.mjs
src/: constants.ts  context.ts  http.ts  index.ts  state.ts
src/advanced/: godot-server.ts  utils.ts
src/advanced/scripts/: godot_operations.gd  mcp_interaction_server.gd
src/services/: editor.ts  engine.ts  processes.ts  refdoc.ts  screenshot.ts  templates.ts  toolchain.ts
src/tools/: advanced.ts  build.ts  docs.ts  editor.ts  engine.ts  project.ts  resources.ts  run.ts  screenshot.ts  shared.ts
src/util/: csharp.ts  errors.ts  fswalk.ts  gdscript.ts  http.ts  ini.ts  log.ts  scene.ts
test/: _client.mjs  advanced.test.mjs  evaluation.xml  http.test.mjs  live-smoke.mjs  server.test.mjs  unit.test.mjs
test/fixture/: export_presets.cfg  project.godot
test/fixture/data/: level_one.tres
test/fixture/main/: main.tscn  player.gd  player.tscn  world.gd
test/fixture/scripts/: Enemy.cs  game_state.gd  level_data.gd
