[package]
name = "godot-mcp-desktop"
version = "1.0.0"
description = "Desktop manager for godot-mcp-server"
authors = ["Fulvio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "godot_mcp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
